Se mudaron las funciones de input a TerminalUtilities.h

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(tp_1)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(tp_1 main.cpp DataTypes.h)
+add_executable(tp_1 main.cpp DataTypes.h includes/TerminalUtilities.h)
